--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {
     "editable": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {
     "editable": true
    },
@@ -232,13 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
     "try:\n",
     "    session.execute(\n",
     "        \"\"\"CREATE KEYSPACE IF NOT EXISTS sparkify WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}\"\"\")\n",
@@ -257,13 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('sparkify')\n",
     "except Exception as e:\n",
@@ -276,7 +274,7 @@
     "editable": true
    },
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "### 1. Provided the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
@@ -285,38 +283,44 @@
     "editable": true
    },
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
-    "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "#### Create Query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "query1=\"\"\"SELECT artist, song_title, length FROM session_songs WHERE session_id=338 and item_in_session=4\"\"\"\n",
-    "\n",
+    "query1=\"\"\"SELECT artist, song_title, length FROM session_songs WHERE session_id=338 and item_in_session=4\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "try:\n",
-    "    session.execute(\"\"\"CREATE TABLE IF NOT EXISTS session_songs( \n",
+    "    session.execute(\"\"\"CREATE TABLE IF NOT EXISTS session_songs(\n",
+    "        session_id int,\n",
+    "        item_in_session int,\n",
     "        artist text,\n",
     "        song_title text,\n",
     "        length float,\n",
-    "        item_in_session int,\n",
-    "        session_id int,\n",
     "        PRIMARY KEY (session_id, item_in_session)\n",
     "    )\"\"\")\n",
     "except Exception as e:\n",
@@ -325,26 +329,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert data into Table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"\"\"INSERT INTO session_songs(artist,song_title, length, item_in_session, session_id)\"\"\"\n",
+    "        query = \"\"\"INSERT INTO session_songs(session_id,item_in_session, artist,song_title, length)\"\"\"\n",
     "        query = query + \" VALUES(%s,%s,%s,%s,%s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[0], line[9], float(line[5]), int(line[3]), int(line[8])))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -358,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {
     "editable": true,
     "scrolled": true
@@ -373,7 +382,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
     "try:\n",
     "    rows=session.execute(query1)\n",
     "except Exception as e:\n",
@@ -388,28 +396,55 @@
     "editable": true
    },
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### 2. Provide name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query2=\"\"\"SELECT artist, song_title, first_name, last_name FROM user_songs WHERE user_id=10 and session_id=182\"\"\"\n",
-    "\n",
+    "query2=\"\"\"SELECT artist, song_title, first_name, last_name FROM user_songs WHERE user_id=10 and session_id=182\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "try:\n",
     "    session.execute(\"\"\"CREATE TABLE IF NOT EXISTS user_songs(\n",
+    "        user_id int,\n",
     "        session_id int,\n",
     "        item_in_session int,\n",
     "        artist text,\n",
     "        song_title text,\n",
     "        first_name text,\n",
     "        last_name text,\n",
-    "        user_id int,\n",
     "        PRIMARY KEY ((user_id, session_id), item_in_session)\n",
     "    );\"\"\")\n",
     "except Exception as e:\n",
@@ -418,31 +453,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert data into Table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"\"\"INSERT INTO user_songs(session_id,item_in_session, artist, song_title, first_name, last_name, user_id)\"\"\"\n",
+    "        query = \"\"\"INSERT INTO user_songs(user_id, session_id,item_in_session, artist, song_title, first_name, last_name)\"\"\"\n",
     "        query = query + \" VALUES(%s,%s,%s,%s,%s,%s,%s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], line[1], line[4], int(line[10])))"
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {
     "editable": true
    },
@@ -468,22 +517,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Query"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "query3=\"\"\"SELECT first_name, last_name FROM listened_songs WHERE song_title='All Hands Against His Own'\"\"\"\n",
-    "        \n",
+    "query3=\"\"\"SELECT first_name, last_name FROM listened_songs WHERE song_title='All Hands Against His Own'\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Create Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "try:\n",
     "    session.execute(\"\"\"CREATE TABLE IF NOT EXISTS listened_songs( \n",
     "        song_title text,\n",
+    "        user_id int,\n",
     "        first_name text,\n",
     "        last_name text,\n",
-    "        PRIMARY KEY (song_title)\n",
+    "        PRIMARY KEY (song_title, user_id)\n",
     "    )\"\"\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
@@ -491,31 +576,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert data into Table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 40,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"\"\"INSERT INTO listened_songs(song_title, first_name, last_name)\"\"\"\n",
-    "        query = query + \" VALUES(%s,%s,%s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[9], line[1], line[4], ))"
+    "        query = \"\"\"INSERT INTO listened_songs(song_title, user_id, first_name, last_name)\"\"\"\n",
+    "        query = query + \" VALUES(%s,%s,%s,%s)\"\n",
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "metadata": {
     "editable": true
    },
@@ -524,7 +623,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jacqueline Lynch\n"
+      "Jacqueline Lynch\n",
+      "Tegan Levine\n",
+      "Sara Johnson\n"
      ]
     }
    ],
@@ -548,18 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "metadata": {
     "editable": true
    },
@@ -582,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 43,
    "metadata": {
     "editable": true
    },
@@ -591,6 +681,15 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
