--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -274,7 +274,7 @@
     "editable": true
    },
    "source": [
-    "### 1. Provided the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
+    "### 1. Show the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
@@ -396,7 +396,7 @@
     "editable": true
    },
    "source": [
-    "### 2. Provide name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+    "### 2. Show name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
    ]
   },
   {
@@ -522,7 +522,7 @@
     "editable": true
    },
    "source": [
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+    "### 3. Show every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
