--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -15,15 +15,6 @@
     "editable": true
    },
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
     "#### Import Python packages "
    ]
   },
@@ -165,9 +156,9 @@
     "editable": true
    },
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "# Part II.\n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "## The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -183,15 +174,6 @@
     "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
     "\n",
     "<img src=\"images/image_event_datafile_new.jpg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
    ]
   },
   {
